Update release notes

--- a/v1.22.1.md
+++ b/v1.22.1.md
@@ -13,14 +13,14 @@
 # CRI-O v1.22.1
 
 The release notes have been generated for the commit range
-[v1.22.0...7486bc8](https://github.com/cri-o/cri-o/compare/v1.22.0...7486bc82a2b6b206ea18741e3135df457917ec1b) on Tue, 08 Feb 2022 08:51:49 UTC.
+[v1.22.0...3c9732a](https://github.com/cri-o/cri-o/compare/v1.22.0...3c9732ab21613e7fb71a0305c01a794782699eb7) on Thu, 10 Feb 2022 15:58:39 UTC.
 
 ## Downloads
 
 Download one of our static release bundles via our Google Cloud Bucket:
 
-- [cri-o.amd64.7486bc82a2b6b206ea18741e3135df457917ec1b.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.7486bc82a2b6b206ea18741e3135df457917ec1b.tar.gz)
-- [cri-o.arm64.7486bc82a2b6b206ea18741e3135df457917ec1b.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.7486bc82a2b6b206ea18741e3135df457917ec1b.tar.gz)
+- [cri-o.amd64.3c9732ab21613e7fb71a0305c01a794782699eb7.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.3c9732ab21613e7fb71a0305c01a794782699eb7.tar.gz)
+- [cri-o.arm64.3c9732ab21613e7fb71a0305c01a794782699eb7.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.3c9732ab21613e7fb71a0305c01a794782699eb7.tar.gz)
 
 ## Changelog since v1.22.0
 
@@ -42,6 +42,7 @@ Download one of our static release bundles via our Google Cloud Bucket:
  - Fix a bug where CRI-O waits forever on a conmon process that will not stop ([#5309](https://github.com/cri-o/cri-o/pull/5309), [@openshift-cherrypick-robot](https://github.com/openshift-cherrypick-robot))
  - Fix a bug where `inspectp` verbose output was incomplete for pods with a dropped infra container ([#5315](https://github.com/cri-o/cri-o/pull/5315), [@openshift-cherrypick-robot](https://github.com/openshift-cherrypick-robot))
  - Fix a bug where host network containers couldn't read their cgroup hierarchy ([#5365](https://github.com/cri-o/cri-o/pull/5365), [@openshift-cherrypick-robot](https://github.com/openshift-cherrypick-robot))
+ - Fix a bug where situations of excessive load on nodes causes containers to never actually start ([#5602](https://github.com/cri-o/cri-o/pull/5602), [@openshift-cherrypick-robot](https://github.com/openshift-cherrypick-robot))
  - Fix a case where conmon children are sometimes leaked ([#5503](https://github.com/cri-o/cri-o/pull/5503), [@openshift-cherrypick-robot](https://github.com/openshift-cherrypick-robot))
  - Fixed missing quantile values in `container_runtime_crio_operations_latency_microseconds_total` metrics ([#5259](https://github.com/cri-o/cri-o/pull/5259), [@openshift-cherrypick-robot](https://github.com/openshift-cherrypick-robot))
  - Merge storage_option from drop-in files to sttorage_option from storage.conf ([#5437](https://github.com/cri-o/cri-o/pull/5437), [@openshift-cherrypick-robot](https://github.com/openshift-cherrypick-robot))
