--- a/v1.22.1.md
+++ b/v1.22.1.md
@@ -13,14 +13,14 @@
 # CRI-O v1.22.1
 
 The release notes have been generated for the commit range
-[v1.22.0...3c9732a](https://github.com/cri-o/cri-o/compare/v1.22.0...3c9732ab21613e7fb71a0305c01a794782699eb7) on Thu, 10 Feb 2022 15:58:39 UTC.
+[v1.22.0...12fa1c7](https://github.com/cri-o/cri-o/compare/v1.22.0...12fa1c78f526183b5d20f36a21421c6189ab5580) on Thu, 10 Feb 2022 21:33:44 UTC.
 
 ## Downloads
 
 Download one of our static release bundles via our Google Cloud Bucket:
 
-- [cri-o.amd64.3c9732ab21613e7fb71a0305c01a794782699eb7.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.3c9732ab21613e7fb71a0305c01a794782699eb7.tar.gz)
-- [cri-o.arm64.3c9732ab21613e7fb71a0305c01a794782699eb7.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.3c9732ab21613e7fb71a0305c01a794782699eb7.tar.gz)
+- [cri-o.amd64.12fa1c78f526183b5d20f36a21421c6189ab5580.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.12fa1c78f526183b5d20f36a21421c6189ab5580.tar.gz)
+- [cri-o.arm64.12fa1c78f526183b5d20f36a21421c6189ab5580.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.12fa1c78f526183b5d20f36a21421c6189ab5580.tar.gz)
 
 ## Changelog since v1.22.0
 
@@ -37,6 +37,7 @@ Download one of our static release bundles via our Google Cloud Bucket:
  - Fix bug where `ip a` reports `Error: Peer netns reference is invalid` ([#5558](https://github.com/cri-o/cri-o/pull/5558), [@haircommander](https://github.com/haircommander))
 
 #### Uncategorized
+ - Allow CRI-O to parse > SIGRTMIN signals ([#5439](https://github.com/cri-o/cri-o/pull/5439), [@openshift-cherrypick-robot](https://github.com/openshift-cherrypick-robot))
  - Do not log on startup if Intel RDT is not supported. ([#5298](https://github.com/cri-o/cri-o/pull/5298), [@openshift-cherrypick-robot](https://github.com/openshift-cherrypick-robot))
  - Fix a PID leak in situations where conmon fails to be moved into the pod cgroup ([#5295](https://github.com/cri-o/cri-o/pull/5295), [@openshift-cherrypick-robot](https://github.com/openshift-cherrypick-robot))
  - Fix a bug where CRI-O waits forever on a conmon process that will not stop ([#5309](https://github.com/cri-o/cri-o/pull/5309), [@openshift-cherrypick-robot](https://github.com/openshift-cherrypick-robot))
