Update release notes

--- a/v1.23.0.md
+++ b/v1.23.0.md
@@ -1,9 +1,9 @@
 - [CRI-O v1.23.0](#cri-o-v1230)
   - [Downloads](#downloads)
-  - [Changelog since v1.22.0](#changelog-since-v1220)
+  - [Changelog since %!s(MISSING)](#changelog-since-smissing)
     - [Changes by Kind](#changes-by-kind)
-      - [Other](#other)
       - [Dependency-Change](#dependency-change)
+      - [Other](#other)
       - [API Change](#api-change)
       - [Feature](#feature)
       - [Documentation](#documentation)
@@ -18,18 +18,23 @@
 # CRI-O v1.23.0
 
 The release notes have been generated for the commit range
-[v1.22.0...bc375e1](https://github.com/cri-o/cri-o/compare/v1.22.0...bc375e1c208eb9902024c0587382bbfa8645ce45) on Thu, 10 Feb 2022 06:02:48 UTC.
+[v1.22.0...d5f68d8](https://github.com/cri-o/cri-o/compare/v1.22.0...d5f68d89b942b026ed93b2fdf0bbc166c19cb86f) on Fri, 11 Feb 2022 00:39:21 UTC.
 
 ## Downloads
 
 Download one of our static release bundles via our Google Cloud Bucket:
 
-- [cri-o.amd64.bc375e1c208eb9902024c0587382bbfa8645ce45.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.bc375e1c208eb9902024c0587382bbfa8645ce45.tar.gz)
-- [cri-o.arm64.bc375e1c208eb9902024c0587382bbfa8645ce45.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.bc375e1c208eb9902024c0587382bbfa8645ce45.tar.gz)
+- [cri-o.amd64.d5f68d89b942b026ed93b2fdf0bbc166c19cb86f.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.d5f68d89b942b026ed93b2fdf0bbc166c19cb86f.tar.gz)
+- [cri-o.amd64.d5f68d89b942b026ed93b2fdf0bbc166c19cb86f.tar.gz.sha256sum](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.d5f68d89b942b026ed93b2fdf0bbc166c19cb86f.tar.gz.sha256sum)
+- [cri-o.arm64.v1.22.0.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.%!s(MISSING).tar.gz)
+- [cri-o.arm64.%!s(MISSING).tar.gz.sha256sum](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.%!s(MISSING).tar.gz.sha256sum)
 
-## Changelog since v1.22.0
+## Changelog since %!s(MISSING)
 
 ### Changes by Kind
+
+#### Dependency-Change
+ - Bumps pause image to 3.6 ([#5310](https://github.com/cri-o/cri-o/pull/5310), [@wgahnagl](https://github.com/wgahnagl))
 
 #### Other
  - Added annotation 'io.kubernetes.cri-o.cgroup2-rw(="true")' that mounts /sys/fs/cgroup as writable fs when using cgroups v2 ([#5277](https://github.com/cri-o/cri-o/pull/5277), [@ajwock](https://github.com/ajwock))
@@ -41,17 +46,15 @@ Download one of our static release bundles via our Google Cloud Bucket:
   crio_image_layer_reuse_total, crio_containers_oom_count_total
   while marking metric names that do not follow prometheus best practices as Deprecated in Prometheus metric help text. ([#5487](https://github.com/cri-o/cri-o/pull/5487), [@swghosh](https://github.com/swghosh))
 
-#### Dependency-Change
- - Bumps pause image to 3.6 ([#5310](https://github.com/cri-o/cri-o/pull/5310), [@wgahnagl](https://github.com/wgahnagl))
-
 #### API Change
  - Drop support for `v1alpha2` Container Runtime Interface (CRI) and require `v1`. ([#5471](https://github.com/cri-o/cri-o/pull/5471), [@saschagrunert](https://github.com/saschagrunert))
 
 #### Feature
- - Add `allowed_devices` field to config, allowing admins to specify which devices are allowed to be specified in the "io.kubernetes.cri-o.Devices" allowed_annotation. The default for this config field is [/dev/fuse] ([#5561](https://github.com/cri-o/cri-o/pull/5561), [@haircommander](https://github.com/haircommander))
+ - Add `allowed_devices` field to config, allowing admins to specify which devices are allowed to be specified in the "io.kubernetes.cri-o.Devices" allowed_annotation. The default for this config field is [/dev/fuse] ([#5551](https://github.com/cri-o/cri-o/pull/5551), [@haircommander](https://github.com/haircommander))
  - Add a [crio.stats] table to the config for configuring all things stats-related.
   Add ability (with config field StatsCollectionPeriod) to calculate and save stats for pods and containers, rather than return them on demand.
   Add support for {,List}PodSandboxStats, which allows the kubelet to take advantage of the PodAndContainerStatsFromCRI feature gate--one that is set to be alpha in 1.23. ([#5427](https://github.com/cri-o/cri-o/pull/5427), [@haircommander](https://github.com/haircommander))
+ - Add functionality to use taskset to spawn new commands cri-o runs. Now, if InfraCtrCPUSet is called, all newly spawned commands will be placed in the InfraCtrCPUSet (as it's expected to be set to the reserved CPU set that system commands should run on). ([#5514](https://github.com/cri-o/cri-o/pull/5514), [@haircommander](https://github.com/haircommander))
  - Add support for "io.kubernetes.cri-o.TrySkipVolumeSELinuxLabel" annotation, which tells CRI-O to skip relabeling volumes if the top level is already correctly labeled ([#5373](https://github.com/cri-o/cri-o/pull/5373), [@haircommander](https://github.com/haircommander))
  - Add support for CNI plugins v1.0.1 ([#5380](https://github.com/cri-o/cri-o/pull/5380), [@saschagrunert](https://github.com/saschagrunert))
  - Add support for TARGET namespace mode, which enables support for ephemeral containers. ([#5440](https://github.com/cri-o/cri-o/pull/5440), [@haircommander](https://github.com/haircommander))
@@ -74,14 +77,25 @@ Download one of our static release bundles via our Google Cloud Bucket:
 #### Bug or Regression
  - Allow for both runtime class and workload level allowed annotations. Now, if a container or pod has both specified, the list will be merged. ([#5465](https://github.com/cri-o/cri-o/pull/5465), [@haircommander](https://github.com/haircommander))
  - Chown the stdin pipe to the user running in the container, so accessing /dev/stdin from an exec session works with crun ([#5391](https://github.com/cri-o/cri-o/pull/5391), [@giuseppe](https://github.com/giuseppe))
+ - Conmon now always writes its logs to syslog, instead of only when the cgroup manager is cgroupfs ([#3773](https://github.com/cri-o/cri-o/pull/3773), [@haircommander](https://github.com/haircommander))
  - Fix a PID leak in situations where conmon fails to be moved into the pod cgroup ([#5283](https://github.com/cri-o/cri-o/pull/5283), [@haircommander](https://github.com/haircommander))
  - Fix a bug where CRI-O waits forever on a conmon process that will not stop ([#5306](https://github.com/cri-o/cri-o/pull/5306), [@haircommander](https://github.com/haircommander))
  - Fix a bug where CRI-O would never shutdown if the networking plugin wasn't configured correctly ([#5284](https://github.com/cri-o/cri-o/pull/5284), [@haircommander](https://github.com/haircommander))
  - Fix a bug where `inspectp` verbose output was incomplete for pods with a dropped infra container ([#5313](https://github.com/cri-o/cri-o/pull/5313), [@haircommander](https://github.com/haircommander))
+ - Fix a bug where a pod given a host IPC or network namespace could configure sysctls on the host ([#5610](https://github.com/cri-o/cri-o/pull/5610), [@haircommander](https://github.com/haircommander))
  - Fix a bug where host network containers couldn't read their cgroup hierarchy ([#5244](https://github.com/cri-o/cri-o/pull/5244), [@haircommander](https://github.com/haircommander))
+ - Fix a bug where memory swap values were specified even if the memory swap cgroup is not enabled ([#5539](https://github.com/cri-o/cri-o/pull/5539), [@haircommander](https://github.com/haircommander))
+ - Fix a bug where situations of excessive load on nodes causes containers to never actually start ([#5590](https://github.com/cri-o/cri-o/pull/5590), [@haircommander](https://github.com/haircommander))
+ - Fix a potential crash caused by a log message NULL-pointer dereference. ([#5579](https://github.com/cri-o/cri-o/pull/5579), [@klihub](https://github.com/klihub))
  - Fix an RSS regression with exec sync requests ([#5245](https://github.com/cri-o/cri-o/pull/5245), [@haircommander](https://github.com/haircommander))
+ - Fix an issue where protobuf panics when serializing ListContainer and ListPodSandbox calls ([#5606](https://github.com/cri-o/cri-o/pull/5606), [@haircommander](https://github.com/haircommander))
+ - Fix bug where `ip a` reports `Error: Peer netns reference is invalid` ([#5529](https://github.com/cri-o/cri-o/pull/5529), [@haircommander](https://github.com/haircommander))
+ - Fix crypto-profile bind within RHEL based containers. ([#5555](https://github.com/cri-o/cri-o/pull/5555), [@rphillips](https://github.com/rphillips))
+ - Fix vm containers couldn't restore after cri-o restart ([#5574](https://github.com/cri-o/cri-o/pull/5574), [@gozssky](https://github.com/gozssky))
+ - Fix zsh completion generation. ([#5586](https://github.com/cri-o/cri-o/pull/5586), [@klihub](https://github.com/klihub))
  - Fixed `contrib/metrics-exporter/cluster.yaml` for `kubectl create`. ([#5286](https://github.com/cri-o/cri-o/pull/5286), [@saschagrunert](https://github.com/saschagrunert))
  - Fixed missing quantile values in `container_runtime_crio_operations_latency_microseconds_total` metrics ([#5258](https://github.com/cri-o/cri-o/pull/5258), [@saschagrunert](https://github.com/saschagrunert))
+ - Fixed possible runtime panic on pod sandbox stats retrieval. ([#5588](https://github.com/cri-o/cri-o/pull/5588), [@saschagrunert](https://github.com/saschagrunert))
  - Fixed superfluous response.WriteHeader error in HTTP endpoint ([#5405](https://github.com/cri-o/cri-o/pull/5405), [@saschagrunert](https://github.com/saschagrunert))
  - Merge storage_option from drop-in files to sttorage_option from storage.conf ([#5423](https://github.com/cri-o/cri-o/pull/5423), [@QiWang19](https://github.com/QiWang19))
  - Move namespace cleanup from sandbox stop to sandbox remove. This allows veth entries in the network namespaces of pods to be cleaned up earlier ([#5336](https://github.com/cri-o/cri-o/pull/5336), [@haircommander](https://github.com/haircommander))
@@ -90,18 +104,11 @@ Download one of our static release bundles via our Google Cloud Bucket:
  - Do not log on startup if Intel RDT is not supported. ([#5293](https://github.com/cri-o/cri-o/pull/5293), [@saschagrunert](https://github.com/saschagrunert))
 
 #### Uncategorized
- - Add functionality to use taskset to spawn new commands cri-o runs. Now, if InfraCtrCPUSet is called, all newly spawned commands will be placed in the InfraCtrCPUSet (as it's expected to be set to the reserved CPU set that system commands should run on). ([#5541](https://github.com/cri-o/cri-o/pull/5541), [@openshift-cherrypick-robot](https://github.com/openshift-cherrypick-robot))
  - Allow CRI-O to parse > SIGRTMIN signals ([#5366](https://github.com/cri-o/cri-o/pull/5366), [@haircommander](https://github.com/haircommander))
- - Fix a bug where a pod given a host IPC or network namespace could configure sysctls on the host ([#5615](https://github.com/cri-o/cri-o/pull/5615), [@openshift-cherrypick-robot](https://github.com/openshift-cherrypick-robot))
- - Fix a bug where memory swap values were specified even if the memory swap cgroup is not enabled ([#5614](https://github.com/cri-o/cri-o/pull/5614), [@openshift-cherrypick-robot](https://github.com/openshift-cherrypick-robot))
- - Fix a bug where situations of excessive load on nodes causes containers to never actually start ([#5592](https://github.com/cri-o/cri-o/pull/5592), [@openshift-cherrypick-robot](https://github.com/openshift-cherrypick-robot))
+ - Changes default config output to comment default values instead of omitting them ([#5007](https://github.com/cri-o/cri-o/pull/5007), [@wgahnagl](https://github.com/wgahnagl))
  - Fix a case where conmon children are sometimes leaked ([#5500](https://github.com/cri-o/cri-o/pull/5500), [@haircommander](https://github.com/haircommander))
- - Fix a potential crash caused by a log message NULL-pointer dereference. ([#5580](https://github.com/cri-o/cri-o/pull/5580), [@openshift-cherrypick-robot](https://github.com/openshift-cherrypick-robot))
- - Fix an issue where protobuf panics when serializing ListContainer and ListPodSandbox calls ([#5611](https://github.com/cri-o/cri-o/pull/5611), [@openshift-cherrypick-robot](https://github.com/openshift-cherrypick-robot))
- - Fix bug where `ip a` reports `Error: Peer netns reference is invalid` ([#5550](https://github.com/cri-o/cri-o/pull/5550), [@openshift-cherrypick-robot](https://github.com/openshift-cherrypick-robot))
- - Fix crypto-profile bind within RHEL based containers. ([#5575](https://github.com/cri-o/cri-o/pull/5575), [@openshift-cherrypick-robot](https://github.com/openshift-cherrypick-robot))
- - Fixed possible runtime panic on pod sandbox stats retrieval. ([#5589](https://github.com/cri-o/cri-o/pull/5589), [@openshift-cherrypick-robot](https://github.com/openshift-cherrypick-robot))
  - Specify runtime table format in  the error message ([#5452](https://github.com/cri-o/cri-o/pull/5452), [@QiWang19](https://github.com/QiWang19))
+ - Update go to 1.17 in go.mod ([#5577](https://github.com/cri-o/cri-o/pull/5577), [@QiWang19](https://github.com/QiWang19))
 
 ## Dependencies
 
@@ -109,6 +116,7 @@ Download one of our static release bundles via our Google Cloud Bucket:
 - github.com/antlr/antlr4/runtime/Go/antlr: [b48c857](https://github.com/antlr/antlr4/runtime/Go/antlr/tree/b48c857)
 - github.com/dtylman/scp: [f3000a3](https://github.com/dtylman/scp/tree/f3000a3)
 - github.com/getkin/kin-openapi: [v0.76.0](https://github.com/getkin/kin-openapi/tree/v0.76.0)
+- github.com/go-logr/stdr: [v1.2.0](https://github.com/go-logr/stdr/tree/v1.2.0)
 - github.com/go-logr/zapr: [v1.2.0](https://github.com/go-logr/zapr/tree/v1.2.0)
 - github.com/google/cel-go: [v0.9.0](https://github.com/google/cel-go/tree/v0.9.0)
 - github.com/google/cel-spec: [v0.6.0](https://github.com/google/cel-spec/tree/v0.6.0)
@@ -150,7 +158,7 @@ Download one of our static release bundles via our Google Cloud Bucket:
 - github.com/evanphx/json-patch: [v4.11.0+incompatible → v4.12.0+incompatible](https://github.com/evanphx/json-patch/compare/v4.11.0...v4.12.0)
 - github.com/fsnotify/fsnotify: [v1.4.9 → v1.5.1](https://github.com/fsnotify/fsnotify/compare/v1.4.9...v1.5.1)
 - github.com/fsouza/go-dockerclient: [v1.7.3 → v1.7.4](https://github.com/fsouza/go-dockerclient/compare/v1.7.3...v1.7.4)
-- github.com/go-logr/logr: [v0.4.0 → v1.2.0](https://github.com/go-logr/logr/compare/v0.4.0...v1.2.0)
+- github.com/go-logr/logr: [v0.4.0 → v1.2.1](https://github.com/go-logr/logr/compare/v0.4.0...v1.2.1)
 - github.com/godbus/dbus/v5: [v5.0.4 → v5.0.6](https://github.com/godbus/dbus/v5/compare/v5.0.4...v5.0.6)
 - github.com/golang/glog: [23def4e → v1.0.0](https://github.com/golang/glog/compare/23def4e...v1.0.0)
 - github.com/google/cadvisor: [v0.39.2 → v0.43.0](https://github.com/google/cadvisor/compare/v0.39.2...v0.43.0)
@@ -166,6 +174,7 @@ Download one of our static release bundles via our Google Cloud Bucket:
 - github.com/onsi/ginkgo: [v1.16.4 → v1.16.5](https://github.com/onsi/ginkgo/compare/v1.16.4...v1.16.5)
 - github.com/onsi/gomega: [v1.16.0 → v1.17.0](https://github.com/onsi/gomega/compare/v1.16.0...v1.17.0)
 - github.com/opencontainers/image-spec: [083f635 → 5ad6f50](https://github.com/opencontainers/image-spec/compare/083f635...5ad6f50)
+- github.com/opencontainers/runc: [v1.0.2 → v1.0.3](https://github.com/opencontainers/runc/compare/v1.0.2...v1.0.3)
 - github.com/opencontainers/selinux: [v1.8.4 → v1.9.1](https://github.com/opencontainers/selinux/compare/v1.8.4...v1.9.1)
 - github.com/prometheus/common: [v0.29.0 → v0.30.0](https://github.com/prometheus/common/compare/v0.29.0...v0.30.0)
 - github.com/prometheus/procfs: [v0.6.0 → v0.7.3](https://github.com/prometheus/procfs/compare/v0.6.0...v0.7.3)
@@ -177,10 +186,10 @@ Download one of our static release bundles via our Google Cloud Bucket:
 - github.com/vishvananda/netlink: [d40f988 → e1a867c](https://github.com/vishvananda/netlink/compare/d40f988...e1a867c)
 - github.com/vishvananda/netns: [db3c7e5 → 2eb08e3](https://github.com/vishvananda/netns/compare/db3c7e5...2eb08e3)
 - github.com/yuin/goldmark: [v1.3.5 → v1.4.0](https://github.com/yuin/goldmark/compare/v1.3.5...v1.4.0)
-- go.opentelemetry.io/contrib/instrumentation/google.golang.org/grpc/otelgrpc: v0.20.0 → v0.26.1
+- go.opentelemetry.io/contrib/instrumentation/google.golang.org/grpc/otelgrpc: v0.20.0 → v0.28.0
 - go.opentelemetry.io/otel/sdk: v0.20.0 → v1.2.0
-- go.opentelemetry.io/otel/trace: v0.20.0 → v1.2.0
-- go.opentelemetry.io/otel: v0.20.0 → v1.2.0
+- go.opentelemetry.io/otel/trace: v0.20.0 → v1.3.0
+- go.opentelemetry.io/otel: v0.20.0 → v1.3.0
 - go.opentelemetry.io/proto/otlp: v0.7.0 → v0.10.0
 - go.uber.org/zap: v1.17.0 → v1.19.0
 - golang.org/x/crypto: 0c34fe9 → 32db794
@@ -190,7 +199,7 @@ Download one of our static release bundles via our Google Cloud Bucket:
 - golang.org/x/text: v0.3.6 → v0.3.7
 - golang.org/x/tools: v0.1.2 → d4cc65f
 - google.golang.org/api: v0.44.0 → v0.46.0
-- google.golang.org/grpc: v1.40.0 → v1.42.0
+- google.golang.org/grpc: v1.40.0 → v1.43.0
 - google.golang.org/protobuf: v1.26.0 → v1.27.1
 - k8s.io/gengo: b6c5ce2 → 485abfe
 - k8s.io/klog/v2: v2.10.0 → v2.30.0
