--- a/v1.23.0.md
+++ b/v1.23.0.md
@@ -1,6 +1,6 @@
 - [CRI-O v1.23.0](#cri-o-v1230)
   - [Downloads](#downloads)
-  - [Changelog since %!s(MISSING)](#changelog-since-smissing)
+  - [Changelog since v1.22.0](#changelog-since-v1220)
     - [Changes by Kind](#changes-by-kind)
       - [Dependency-Change](#dependency-change)
       - [Other](#other)
@@ -18,18 +18,18 @@
 # CRI-O v1.23.0
 
 The release notes have been generated for the commit range
-[v1.22.0...ee93d5c](https://github.com/cri-o/cri-o/compare/v1.22.0...ee93d5ca4086cde9a6dc91a51b208484a7c48f5c) on Tue, 15 Feb 2022 13:22:05 UTC.
+[v1.22.0...f9ac992](https://github.com/cri-o/cri-o/compare/v1.22.0...f9ac99239dc4ca47d9ef05edcf9339e745c946ab) on Tue, 15 Feb 2022 16:06:08 UTC.
 
 ## Downloads
 
 Download one of our static release bundles via our Google Cloud Bucket:
 
-- [cri-o.amd64.ee93d5ca4086cde9a6dc91a51b208484a7c48f5c.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.ee93d5ca4086cde9a6dc91a51b208484a7c48f5c.tar.gz)
-- [cri-o.amd64.ee93d5ca4086cde9a6dc91a51b208484a7c48f5c.tar.gz.sha256sum](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.ee93d5ca4086cde9a6dc91a51b208484a7c48f5c.tar.gz.sha256sum)
-- [cri-o.arm64.v1.22.0.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.%!s(MISSING).tar.gz)
-- [cri-o.arm64.%!s(MISSING).tar.gz.sha256sum](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.%!s(MISSING).tar.gz.sha256sum)
+- [cri-o.amd64.f9ac99239dc4ca47d9ef05edcf9339e745c946ab.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.f9ac99239dc4ca47d9ef05edcf9339e745c946ab.tar.gz)
+- [cri-o.amd64.f9ac99239dc4ca47d9ef05edcf9339e745c946ab.tar.gz.sha256sum](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.f9ac99239dc4ca47d9ef05edcf9339e745c946ab.tar.gz.sha256sum)
+- [cri-o.arm64.f9ac99239dc4ca47d9ef05edcf9339e745c946ab.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.f9ac99239dc4ca47d9ef05edcf9339e745c946ab.tar.gz)
+- [cri-o.arm64.f9ac99239dc4ca47d9ef05edcf9339e745c946ab.tar.gz.sha256sum](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.f9ac99239dc4ca47d9ef05edcf9339e745c946ab.tar.gz.sha256sum)
 
-## Changelog since %!s(MISSING)
+## Changelog since v1.22.0
 
 ### Changes by Kind
 
