Update release notes

--- a/v1.23.0.md
+++ b/v1.23.0.md
@@ -2,8 +2,8 @@
   - [Downloads](#downloads)
   - [Changelog since v1.22.0](#changelog-since-v1220)
     - [Changes by Kind](#changes-by-kind)
-      - [Dependency-Change](#dependency-change)
       - [Other](#other)
+      - [Dependency-Change](#dependency-change)
       - [API Change](#api-change)
       - [Feature](#feature)
       - [Documentation](#documentation)
@@ -18,23 +18,20 @@
 # CRI-O v1.23.0
 
 The release notes have been generated for the commit range
-[v1.22.0...fc5423f](https://github.com/cri-o/cri-o/compare/v1.22.0...fc5423f4e7142970c48a6b86952c333d34164541) on Thu, 17 Feb 2022 02:20:26 UTC.
+[v1.22.0...d0b00ab](https://github.com/cri-o/cri-o/compare/v1.22.0...d0b00abbc0bde84583c8b04193e0f6b8c228054c) on Thu, 17 Feb 2022 04:56:57 UTC.
 
 ## Downloads
 
 Download one of our static release bundles via our Google Cloud Bucket:
 
-- [cri-o.amd64.fc5423f4e7142970c48a6b86952c333d34164541.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.fc5423f4e7142970c48a6b86952c333d34164541.tar.gz)
-- [cri-o.amd64.fc5423f4e7142970c48a6b86952c333d34164541.tar.gz.sha256sum](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.fc5423f4e7142970c48a6b86952c333d34164541.tar.gz.sha256sum)
-- [cri-o.arm64.fc5423f4e7142970c48a6b86952c333d34164541.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.fc5423f4e7142970c48a6b86952c333d34164541.tar.gz)
-- [cri-o.arm64.fc5423f4e7142970c48a6b86952c333d34164541.tar.gz.sha256sum](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.fc5423f4e7142970c48a6b86952c333d34164541.tar.gz.sha256sum)
+- [cri-o.amd64.d0b00abbc0bde84583c8b04193e0f6b8c228054c.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.d0b00abbc0bde84583c8b04193e0f6b8c228054c.tar.gz)
+- [cri-o.amd64.d0b00abbc0bde84583c8b04193e0f6b8c228054c.tar.gz.sha256sum](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.d0b00abbc0bde84583c8b04193e0f6b8c228054c.tar.gz.sha256sum)
+- [cri-o.arm64.d0b00abbc0bde84583c8b04193e0f6b8c228054c.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.d0b00abbc0bde84583c8b04193e0f6b8c228054c.tar.gz)
+- [cri-o.arm64.d0b00abbc0bde84583c8b04193e0f6b8c228054c.tar.gz.sha256sum](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.d0b00abbc0bde84583c8b04193e0f6b8c228054c.tar.gz.sha256sum)
 
 ## Changelog since v1.22.0
 
 ### Changes by Kind
-
-#### Dependency-Change
- - Bumps pause image to 3.6 ([#5310](https://github.com/cri-o/cri-o/pull/5310), [@wgahnagl](https://github.com/wgahnagl))
 
 #### Other
  - Added annotation 'io.kubernetes.cri-o.cgroup2-rw(="true")' that mounts /sys/fs/cgroup as writable fs when using cgroups v2 ([#5277](https://github.com/cri-o/cri-o/pull/5277), [@ajwock](https://github.com/ajwock))
@@ -45,6 +42,9 @@ Download one of our static release bundles via our Google Cloud Bucket:
   crio_image_pulls_success_total, crio_image_pulls_failure_total,
   crio_image_layer_reuse_total, crio_containers_oom_count_total
   while marking metric names that do not follow prometheus best practices as Deprecated in Prometheus metric help text. ([#5487](https://github.com/cri-o/cri-o/pull/5487), [@swghosh](https://github.com/swghosh))
+
+#### Dependency-Change
+ - Bumps pause image to 3.6 ([#5310](https://github.com/cri-o/cri-o/pull/5310), [@wgahnagl](https://github.com/wgahnagl))
 
 #### API Change
  - Drop support for `v1alpha2` Container Runtime Interface (CRI) and require `v1`. ([#5471](https://github.com/cri-o/cri-o/pull/5471), [@saschagrunert](https://github.com/saschagrunert))
@@ -97,6 +97,7 @@ Download one of our static release bundles via our Google Cloud Bucket:
  - Fixed missing quantile values in `container_runtime_crio_operations_latency_microseconds_total` metrics ([#5258](https://github.com/cri-o/cri-o/pull/5258), [@saschagrunert](https://github.com/saschagrunert))
  - Fixed possible runtime panic on pod sandbox stats retrieval. ([#5588](https://github.com/cri-o/cri-o/pull/5588), [@saschagrunert](https://github.com/saschagrunert))
  - Fixed superfluous response.WriteHeader error in HTTP endpoint ([#5405](https://github.com/cri-o/cri-o/pull/5405), [@saschagrunert](https://github.com/saschagrunert))
+ - Forbid AppArmor profiles with the name `localhost/`. ([#5655](https://github.com/cri-o/cri-o/pull/5655), [@saschagrunert](https://github.com/saschagrunert))
  - Merge storage_option from drop-in files to sttorage_option from storage.conf ([#5423](https://github.com/cri-o/cri-o/pull/5423), [@QiWang19](https://github.com/QiWang19))
  - Move namespace cleanup from sandbox stop to sandbox remove. This allows veth entries in the network namespaces of pods to be cleaned up earlier ([#5336](https://github.com/cri-o/cri-o/pull/5336), [@haircommander](https://github.com/haircommander))
 
