Update release notes

--- a/v1.22.1.md
+++ b/v1.22.1.md
@@ -13,14 +13,14 @@
 # CRI-O v1.22.1
 
 The release notes have been generated for the commit range
-[v1.22.0...3029b1d](https://github.com/cri-o/cri-o/compare/v1.22.0...3029b1dbc46b3002d784d9cf0ba680c92447e7a1) on Tue, 15 Feb 2022 18:25:24 UTC.
+[v1.22.0...ab89fa1](https://github.com/cri-o/cri-o/compare/v1.22.0...ab89fa157896d1add5005c48b4f6c95c1f5d291d) on Thu, 17 Feb 2022 19:27:52 UTC.
 
 ## Downloads
 
 Download one of our static release bundles via our Google Cloud Bucket:
 
-- [cri-o.amd64.3029b1dbc46b3002d784d9cf0ba680c92447e7a1.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.3029b1dbc46b3002d784d9cf0ba680c92447e7a1.tar.gz)
-- [cri-o.arm64.3029b1dbc46b3002d784d9cf0ba680c92447e7a1.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.3029b1dbc46b3002d784d9cf0ba680c92447e7a1.tar.gz)
+- [cri-o.amd64.ab89fa157896d1add5005c48b4f6c95c1f5d291d.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.ab89fa157896d1add5005c48b4f6c95c1f5d291d.tar.gz)
+- [cri-o.arm64.ab89fa157896d1add5005c48b4f6c95c1f5d291d.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.ab89fa157896d1add5005c48b4f6c95c1f5d291d.tar.gz)
 
 ## Changelog since v1.22.0
 
@@ -41,6 +41,7 @@ Download one of our static release bundles via our Google Cloud Bucket:
  - Do not log on startup if Intel RDT is not supported. ([#5298](https://github.com/cri-o/cri-o/pull/5298), [@openshift-cherrypick-robot](https://github.com/openshift-cherrypick-robot))
  - Fix a PID leak in situations where conmon fails to be moved into the pod cgroup ([#5295](https://github.com/cri-o/cri-o/pull/5295), [@openshift-cherrypick-robot](https://github.com/openshift-cherrypick-robot))
  - Fix a bug where CRI-O waits forever on a conmon process that will not stop ([#5309](https://github.com/cri-o/cri-o/pull/5309), [@openshift-cherrypick-robot](https://github.com/openshift-cherrypick-robot))
+ - Fix a bug where CRI-O would never shutdown if the networking plugin wasn't configured correctly ([#5507](https://github.com/cri-o/cri-o/pull/5507), [@openshift-cherrypick-robot](https://github.com/openshift-cherrypick-robot))
  - Fix a bug where `inspectp` verbose output was incomplete for pods with a dropped infra container ([#5315](https://github.com/cri-o/cri-o/pull/5315), [@openshift-cherrypick-robot](https://github.com/openshift-cherrypick-robot))
  - Fix a bug where host network containers couldn't read their cgroup hierarchy ([#5365](https://github.com/cri-o/cri-o/pull/5365), [@openshift-cherrypick-robot](https://github.com/openshift-cherrypick-robot))
  - Fix a bug where situations of excessive load on nodes causes containers to never actually start ([#5602](https://github.com/cri-o/cri-o/pull/5602), [@openshift-cherrypick-robot](https://github.com/openshift-cherrypick-robot))
