Update release notes

--- a/v1.22.1.md
+++ b/v1.22.1.md
@@ -13,14 +13,14 @@
 # CRI-O v1.22.1
 
 The release notes have been generated for the commit range
-[v1.22.0...6487091](https://github.com/cri-o/cri-o/compare/v1.22.0...6487091f2bac5f86d0226b970321f119655ebf44) on Thu, 17 Feb 2022 21:25:43 UTC.
+[v1.22.0...b53b319](https://github.com/cri-o/cri-o/compare/v1.22.0...b53b319467e726546928b25fc4fa5db89c81a1cc) on Thu, 17 Feb 2022 23:39:37 UTC.
 
 ## Downloads
 
 Download one of our static release bundles via our Google Cloud Bucket:
 
-- [cri-o.amd64.6487091f2bac5f86d0226b970321f119655ebf44.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.6487091f2bac5f86d0226b970321f119655ebf44.tar.gz)
-- [cri-o.arm64.6487091f2bac5f86d0226b970321f119655ebf44.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.6487091f2bac5f86d0226b970321f119655ebf44.tar.gz)
+- [cri-o.amd64.b53b319467e726546928b25fc4fa5db89c81a1cc.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.b53b319467e726546928b25fc4fa5db89c81a1cc.tar.gz)
+- [cri-o.arm64.b53b319467e726546928b25fc4fa5db89c81a1cc.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.b53b319467e726546928b25fc4fa5db89c81a1cc.tar.gz)
 
 ## Changelog since v1.22.0
 
@@ -43,6 +43,7 @@ Download one of our static release bundles via our Google Cloud Bucket:
  - Fix a bug where CRI-O waits forever on a conmon process that will not stop ([#5309](https://github.com/cri-o/cri-o/pull/5309), [@openshift-cherrypick-robot](https://github.com/openshift-cherrypick-robot))
  - Fix a bug where CRI-O would never shutdown if the networking plugin wasn't configured correctly ([#5507](https://github.com/cri-o/cri-o/pull/5507), [@openshift-cherrypick-robot](https://github.com/openshift-cherrypick-robot))
  - Fix a bug where `inspectp` verbose output was incomplete for pods with a dropped infra container ([#5315](https://github.com/cri-o/cri-o/pull/5315), [@openshift-cherrypick-robot](https://github.com/openshift-cherrypick-robot))
+ - Fix a bug where a pod given a host IPC or network namespace could configure sysctls on the host ([#5616](https://github.com/cri-o/cri-o/pull/5616), [@openshift-cherrypick-robot](https://github.com/openshift-cherrypick-robot))
  - Fix a bug where host network containers couldn't read their cgroup hierarchy ([#5365](https://github.com/cri-o/cri-o/pull/5365), [@openshift-cherrypick-robot](https://github.com/openshift-cherrypick-robot))
  - Fix a bug where situations of excessive load on nodes causes containers to never actually start ([#5602](https://github.com/cri-o/cri-o/pull/5602), [@openshift-cherrypick-robot](https://github.com/openshift-cherrypick-robot))
  - Fix a case where conmon children are sometimes leaked ([#5503](https://github.com/cri-o/cri-o/pull/5503), [@openshift-cherrypick-robot](https://github.com/openshift-cherrypick-robot))
